--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,21 @@
             <version>0.12.6</version> <!-- Must match jjwt-api version -->
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-validation</artifactId>
+    	</dependency>
+		<dependency>
+			<groupId>com.google.genai</groupId>
+			<artifactId>google-genai</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<!-- .env file support -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.0</version> <!-- Check for the latest version on Maven Central -->
+		</dependency> 
 	</dependencies>
 
 	<build>
